embedded migrations into go code
